# sticker-recommendation-system

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  fetch_sticker.py  log4rs.yaml  sticker_api.py  test_2.py
extension/: README.md  background.js  index.html  index.js  manifest.json  signup.html  style.css
frontend/: index.html  package-lock.json
frontend/src/: main.jsx
frontend/src/components/: About.css  About.jsx  Contact.css  Contact.jsx  History.css  History.jsx  Profile.jsx  ProtectedRoute.jsx  Recommend.jsx  Search.css  Search.jsx  SidePanel.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Login.jsx  Signup.jsx
project_details/: Sticker_Finder_Project_Report.markdown  Sticker_Finder_Project_Report_aim.markdown
rust-backend/: .gitignore  Cargo.toml  Dockerfile  log4rs.yaml
rust-backend/src/: main.rs
rust-backend/src/configs/: env_load.rs
rust-backend/src/middleware/: auth_middleware.rs  cors_mgt.rs  validate.rs
rust-backend/src/routes/: admin.rs  health.rs  mod.rs  recommend.rs  top_stickers.rs  user.rs
src/: init.rs  main.rs
src/configs/: env_load.rs  mod.rs
src/middleware/: auth.rs  cors_mgt.rs  mod.rs  validate.rs
src/models/: database (copy 1).rs  database.rs  database.txt
src/routes/: admin.rs  auth.rs  health.rs  history.rs  mod.rs  recommend (copy 1).rs  recommend.rs  recommend.txt  user.rs
src/structs/: database_structs.rs  mod.rs
sticker-api/: .env  Dockerfile  requirements.txt  sticker_api.py
vite-frontend/: Dockerfile  package.json
vite-frontend/src/: App.jsx  styles.css
(+16 files in other folders)
