[package]
name = "sticker-proj"
version = "0.1.0"
edition = "2021"
description = "A Rust web server application built with Actix for sticker recommendation"
authors = ["Noble"]

[dependencies]
actix-governor = "0.8.0"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-rt = "2"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.27"
log4rs = "1.3.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "rust_decimal", "chrono", "uuid", "postgres", "mysql", "sqlite"] }
sqlx-postgres = { version = "0.8.3"}
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
actix-web-httpauth = "0.8.2"
actix-error = "0.2.11"
futures = "0.3.31"
futures-util = "0.3.31"
redis = { version = "0.32.4", features = ["tokio-comp"] }
reqwest = { version = "0.12.22", features = ["json"] }
